client/src/styles/Game.css
#game-cont {
  background-color: var(--body);
  position: relative;
  padding: 0 30px 30px 30px;
  margin: 0;
  font-variant-numeric: tabular-nums;
  border-radius: 5px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
}

#game-cont {
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-drag: none;
}

.icon-random, .icon-target {
  position: absolute;
  border-radius: 100%;
}

.canvas-cont{
  position: relative;
}

.canvas-cont.canvas-disabled {
  pointer-events: none; /* Prevent interactions with the canvas */
}

#canvas {
  position: relative;
  background-image: url("/grass_winter.png");
  border: 30px solid white;
  border-radius: 5px;
}

.target-highlight {
  border-radius: 50%;
  border: 8px solid green;
  /* Calc for icon size of 107x78 px because iconHeight = iconWidth for circle */
  top: calc(-8px * 2*(107/78));
  left: -8px;
  transform: scale(1.1);
  z-index: 9;
}

.target-fail {
  border: 8px solid var(--fail-red);
}

.floating-text {
  position: absolute;
  font-size: 2rem;
  font-weight: bold;
  animation: floatUp 1s ease-out forwards;
  pointer-events: none;
  opacity: 0;
  z-index: 12;
}

@keyframes floatUp {
  0% {
    transform: translateY(0);
    opacity: 1;
  }
  50% {
    opacity: 1;
  }
  100% {
    transform: translateY(-30px);
    opacity: 0;
  }
}

.fullscreen {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
}

.fullscreen button {
  font-size: 1.25rem;
}

.fullscreen .btn-fullscreen {
  position: absolute;
  top: 10px;
  right: 10px;
  color: white;
  border: none;
  cursor: pointer;
  z-index: 100;
}

@media (max-width: 675px) {
  #game-cont {
    transform: scale(0.9);
  }
}

@media (max-width: 600px) {
  #game-cont {
    transform: scale(0.8);
  }
}

@media (max-width: 450px) {
  #game-cont {
    transform: scale(0.7);
  }
}

